// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete dynamic behavior on focus 1`] = `
<ul
  class="MuiList-root Menu-root PicassoScrollMenu-menu"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      data-test-id="menu-item-0"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            Belarus
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-1"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            Croatia
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-2"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            Lithuania
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-3"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            Slovakia
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-4"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            Ukraine
          </span>
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`Autocomplete dynamic behavior renders custom other options 1`] = `
<div
  data-testid="my-other-option"
>
  Other option!
</div>
`;

exports[`Autocomplete dynamic behavior renders custom other options text and calls onOtherOptionSelect when selected 1`] = `
<li
  aria-disabled="false"
  aria-selected="false"
  class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option PicassoAutocomplete-otherOption MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
  data-testid="other-option"
  role="option"
  tabindex="-1"
>
  <div
    class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex"
    >
      <span
        class="PicassoAutocomplete-stringContent"
      >
        <span
          class="MuiTypography-root PicassoTypography-bodyInherit PicassoTypography-darkGrey MuiTypography-body1"
        >
          my option:
        </span>
        Other option!
      </span>
    </div>
  </div>
</li>
`;

exports[`Autocomplete dynamic behavior renders other option with default text 1`] = `
<li
  aria-disabled="false"
  aria-selected="false"
  class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option PicassoAutocomplete-otherOption MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
  data-testid="other-option"
  role="option"
  tabindex="-1"
>
  <div
    class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex"
    >
      <span
        class="PicassoAutocomplete-stringContent"
      >
        <span
          class="MuiTypography-root PicassoTypography-bodyInherit PicassoTypography-darkGrey MuiTypography-body1"
        >
          Other option: 
        </span>
        Other option!
      </span>
    </div>
  </div>
</li>
`;

exports[`Autocomplete static behavior renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="PicassoAutocomplete-root PicassoAutocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="PicassoContainer-flex"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoOutlinedInput-rootAuto PicassoOutlinedInput-rootMedium MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            aria-autocomplete="list"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            data-testid="autocomplete"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root PicassoInputAdornment-root PicassoOutlinedInput-resetButton MuiInputAdornment-positionEnd"
          >
            <button
              class="MuiButtonBase-root PicassoButton-small PicassoButton-primary PicassoButton-root PicassoButtonCircular-flat PicassoButtonCircular-root"
              data-component-type="button"
              role="reset"
              tabindex="-1"
              type="button"
            >
              <span
                class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
              >
                <svg
                  class="PicassoSvgCloseMinor16-root PicassoButton-icon"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior renders custom display value 1`] = `
<ul
  class="MuiList-root Menu-root PicassoScrollMenu-menu"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      data-test-id="menu-item-0"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            BelarusBY
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-1"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            CroatiaHR
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-2"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            LithuaniaLU
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-3"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            SlovakiaSK
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-4"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentMedium"
          >
            UkraineUA
          </span>
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`Autocomplete static behavior renders custom options with custom keys 1`] = `
<ul
  class="MuiList-root Menu-root PicassoScrollMenu-menu"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="PicassoScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option Mui-selected PicassoMenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      data-test-id="menu-item-0"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            data-testid="custom-option"
          >
            BY
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-1"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            data-testid="custom-option"
          >
            HR
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-2"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            data-testid="custom-option"
          >
            LU
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-3"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            data-testid="custom-option"
          >
            SK
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-guttersMedium PicassoMenuItem-root PicassoMenuItem-light PicassoAutocomplete-option MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-test-id="menu-item-4"
      role="option"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            data-testid="custom-option"
          >
            UA
          </div>
        </div>
      </div>
    </li>
  </div>
</ul>
`;
